Squashed commit of the following:
commit d9fb0846d15aae99033b8c2b5f19a0353d8ebb0b
Author: Eugene <inbox@null.page>
Date:   Mon Jun 29 22:28:08 2026 +0200

    schemas

commit af4df05b31598189f091c2969d1335be64c7c09a
Merge: d7dafffd 9d3c853a
Author: Eugene <inbox@null.page>
Date:   Mon Jun 29 20:38:24 2026 +0200

    Merge remote-tracking branch 'origin/main' into 2108-webssh-toggle

commit d7dafffdc470041cdcc88b9fe6a0affdb4747f57
Author: Eugene <inbox@null.page>
Date:   Mon Jun 29 16:06:41 2026 +0200

    fixed #2108 - global toggle for webSSH
