# warpgate-db-entities/src/Parameters.rs
@@ -60,6 +60,7 @@ pub struct Model {
     pub lp_user_exempt_admins: bool,
     #[sea_orm(column_type = "Text")]
     pub ssh_banner: String,
+    pub web_ssh_enabled: bool,
 }
 
 impl ActiveModelBehavior for ActiveModel {}
@@ -124,6 +125,7 @@ impl Entity {
                     lp_user_lockout_duration_seconds: Set(3600),
                     lp_user_exempt_admins: Set(true),
                     ssh_banner: Set("".into()),
+                    web_ssh_enabled: Set(true),
                 }
                 .insert(db)
                 .await
